--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@node-saml/node-saml": "^5.0.0",
     "@node-saml/passport-saml": "^5.0.0",
+    "cookie-parser": "^1.4.7",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "general-utils-client": "^1.1.0",
@@ -12,8 +13,14 @@
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.8",
     "@types/express-session": "^1.18.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/passport": "^1.0.17"
+  },
+  "scripts": {
+    "start:app-space": "node dist/server.js",
+    "start:app-client": "node dist/server.client.js",
+    "build": "tsc"
   }
 }
